TypeChecker/quack.output
Terminals unused in grammar

   NEG


Grammar

    0 $accept: program $end

    1 program: opt_classes opt_statements

    2 opt_classes: classes
    3            | %empty

    4 classes: classes class
    5        | class

    6 opt_statements: statements
    7               | %empty

    8 statements: statements statement
    9           | statement

   10 class: CLASS IDENT '(' opt_formal_args ')' opt_extends '{' opt_statements opt_methods '}'

   11 opt_formal_args: formal_args
   12                | %empty

   13 formal_args: arg
   14            | formal_args ',' arg

   15 arg: IDENT ':' IDENT

   16 opt_extends: EXTENDS IDENT
   17            | %empty

   18 opt_methods: methods
   19            | %empty

   20 methods: methods method
   21        | method

   22 method: DEF IDENT '(' opt_formal_args ')' opt_ident statement_block

   23 opt_ident: ':' IDENT
   24          | %empty

   25 statement_block: '{' opt_statements '}'

   26 statement: if_statement

   27 if_statement: IF r_expr statement_block opt_elif opt_else

   28 opt_elif: more_elif
   29         | %empty

   30 more_elif: more_elif ELIF r_expr statement_block
   31          | ELIF r_expr statement_block

   32 opt_else: ELSE statement_block
   33         | %empty

   34 statement: WHILE r_expr statement_block
   35          | l_expr opt_ident '=' r_expr ';'

   36 l_expr: IDENT
   37       | r_expr '.' IDENT

   38 statement: r_expr ';'

   39 r_expr: STRING_LIT
   40       | INT_LIT
   41       | l_expr
   42       | r_expr '+' r_expr
   43       | r_expr '-' r_expr
   44       | r_expr '*' r_expr
   45       | r_expr '/' r_expr
   46       | '-' r_expr
   47       | '(' r_expr ')'
   48       | r_expr EQUALS r_expr
   49       | r_expr ATLEAST r_expr
   50       | r_expr ATMOST r_expr
   51       | r_expr '<' r_expr
   52       | r_expr '>' r_expr
   53       | r_expr AND r_expr
   54       | r_expr OR r_expr
   55       | NOT r_expr
   56       | r_expr '.' IDENT '(' actual_args ')'

   57 actual_args: seq_r_expr
   58            | %empty

   59 seq_r_expr: seq_r_expr ',' r_expr
   60           | r_expr

   61 r_expr: IDENT '(' actual_args ')'

   62 statement: RETURN opt_r_expr ';'

   63 opt_r_expr: r_expr
   64           | %empty

   65 statement: TYPECASE r_expr '{' opt_type_alt '}'

   66 opt_type_alt: more_type_alt
   67             | %empty

   68 more_type_alt: more_type_alt type_alt
   69              | type_alt

   70 type_alt: IDENT ':' IDENT statement_block


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 22 47 56 61
')' (41) 10 22 47 56 61
'*' (42) 44
'+' (43) 42
',' (44) 14 59
'-' (45) 43 46
'.' (46) 37 56
'/' (47) 45
':' (58) 15 23 70
';' (59) 35 38 62
'<' (60) 51
'=' (61) 35
'>' (62) 52
'{' (123) 10 25 65
'}' (125) 10 25 65
error (256)
CLASS (258) 10
DEF (259) 22
EXTENDS (260) 16
IF (261) 27
ELIF (262) 30 31
ELSE (263) 32
WHILE (264) 34
RETURN (265) 62
TYPECASE (266) 65
ATLEAST (267) 49
ATMOST (268) 50
EQUALS (269) 48
AND (270) 53
OR (271) 54
NOT (272) 55
IDENT <str> (273) 10 15 16 22 23 36 37 56 61 70
INT_LIT <num> (274) 40
STRING_LIT <str> (275) 39
NEG (276)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
opt_classes <classes> (39)
    on left: 2 3, on right: 1
classes <classes> (40)
    on left: 4 5, on right: 2 4
opt_statements <block> (41)
    on left: 6 7, on right: 1 10 25
statements <block> (42)
    on left: 8 9, on right: 6 8
class <clazz> (43)
    on left: 10, on right: 4 5
opt_formal_args <formal_args> (44)
    on left: 11 12, on right: 10 22
formal_args <formal_args> (45)
    on left: 13 14, on right: 11 14
arg <arg> (46)
    on left: 15, on right: 13 14
opt_extends <ident> (47)
    on left: 16 17, on right: 10
opt_methods <methods> (48)
    on left: 18 19, on right: 10
methods <methods> (49)
    on left: 20 21, on right: 18 20
method <method> (50)
    on left: 22, on right: 20 21
opt_ident <ident> (51)
    on left: 23 24, on right: 22 35
statement_block <block> (52)
    on left: 25, on right: 22 27 30 31 32 34 70
statement <stmt> (53)
    on left: 26 34 35 38 62 65, on right: 8 9
if_statement <if_else> (54)
    on left: 27, on right: 26
opt_elif <elif_block> (55)
    on left: 28 29, on right: 27
more_elif <elif_block> (56)
    on left: 30 31, on right: 28 30
opt_else <block> (57)
    on left: 32 33, on right: 27
l_expr <l_expr> (58)
    on left: 36 37, on right: 35 41
r_expr <r_expr> (59)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    61, on right: 27 30 31 34 35 37 38 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 59 60 63 65
actual_args <actual_args> (60)
    on left: 57 58, on right: 56 61
seq_r_expr <actual_args> (61)
    on left: 59 60, on right: 57 59
opt_r_expr <r_expr> (62)
    on left: 63 64, on right: 62
opt_type_alt <typealts> (63)
    on left: 66 67, on right: 65
more_type_alt <typealts> (64)
    on left: 68 69, on right: 66 68
type_alt <typealt> (65)
    on left: 70, on right: 68 69


State 0

    0 $accept: . program $end
    1 program: . opt_classes opt_statements
    2 opt_classes: . classes
    3            | . %empty  [$end, IF, WHILE, RETURN, TYPECASE, NOT, IDENT, INT_LIT, STRING_LIT, '-', '(']
    4 classes: . classes class
    5        | . class
   10 class: . CLASS IDENT '(' opt_formal_args ')' opt_extends '{' opt_statements opt_methods '}'

    CLASS  shift, and go to state 1

    $default  reduce using rule 3 (opt_classes)

    program      go to state 2
    opt_classes  go to state 3
    classes      go to state 4
    class        go to state 5


State 1

   10 class: CLASS . IDENT '(' opt_formal_args ')' opt_extends '{' opt_statements opt_methods '}'

    IDENT  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: opt_classes . opt_statements
    6 opt_statements: . statements
    7               | . %empty  [$end]
    8 statements: . statements statement
    9           | . statement
   26 statement: . if_statement
   27 if_statement: . IF r_expr statement_block opt_elif opt_else
   34 statement: . WHILE r_expr statement_block
   35          | . l_expr opt_ident '=' r_expr ';'
   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   38 statement: . r_expr ';'
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'
   62 statement: . RETURN opt_r_expr ';'
   65          | . TYPECASE r_expr '{' opt_type_alt '}'

    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    TYPECASE    shift, and go to state 11
    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    $default  reduce using rule 7 (opt_statements)

    opt_statements  go to state 18
    statements      go to state 19
    statement       go to state 20
    if_statement    go to state 21
    l_expr          go to state 22
    r_expr          go to state 23


State 4

    2 opt_classes: classes .  [$end, IF, WHILE, RETURN, TYPECASE, NOT, IDENT, INT_LIT, STRING_LIT, '-', '(']
    4 classes: classes . class
   10 class: . CLASS IDENT '(' opt_formal_args ')' opt_extends '{' opt_statements opt_methods '}'

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (opt_classes)

    class  go to state 24


State 5

    5 classes: class .

    $default  reduce using rule 5 (classes)


State 6

   10 class: CLASS IDENT . '(' opt_formal_args ')' opt_extends '{' opt_statements opt_methods '}'

    '('  shift, and go to state 25


State 7

    0 $accept: program $end .

    $default  accept


State 8

   27 if_statement: IF . r_expr statement_block opt_elif opt_else
   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'

    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    l_expr  go to state 26
    r_expr  go to state 27


State 9

   34 statement: WHILE . r_expr statement_block
   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'

    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    l_expr  go to state 26
    r_expr  go to state 28


State 10

   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'
   62 statement: RETURN . opt_r_expr ';'
   63 opt_r_expr: . r_expr
   64           | . %empty  [';']

    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    $default  reduce using rule 64 (opt_r_expr)

    l_expr      go to state 26
    r_expr      go to state 29
    opt_r_expr  go to state 30


State 11

   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'
   65 statement: TYPECASE . r_expr '{' opt_type_alt '}'

    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    l_expr  go to state 26
    r_expr  go to state 31


State 12

   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   55       | NOT . r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'

    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    l_expr  go to state 26
    r_expr  go to state 32


State 13

   36 l_expr: IDENT .  [ATLEAST, ATMOST, EQUALS, AND, OR, '>', '<', '+', '-', '*', '/', '.', ')', '{', ',', ':', '=', ';']
   61 r_expr: IDENT . '(' actual_args ')'

    '('  shift, and go to state 33

    $default  reduce using rule 36 (l_expr)


State 14

   40 r_expr: INT_LIT .

    $default  reduce using rule 40 (r_expr)


State 15

   39 r_expr: STRING_LIT .

    $default  reduce using rule 39 (r_expr)


State 16

   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   46       | '-' . r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'

    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    l_expr  go to state 26
    r_expr  go to state 34


State 17

   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   47       | '(' . r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'

    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    l_expr  go to state 26
    r_expr  go to state 35


State 18

    1 program: opt_classes opt_statements .

    $default  reduce using rule 1 (program)


State 19

    6 opt_statements: statements .  [$end, DEF, '}']
    8 statements: statements . statement
   26 statement: . if_statement
   27 if_statement: . IF r_expr statement_block opt_elif opt_else
   34 statement: . WHILE r_expr statement_block
   35          | . l_expr opt_ident '=' r_expr ';'
   36 l_expr: . IDENT
   37       | . r_expr '.' IDENT
   38 statement: . r_expr ';'
   39 r_expr: . STRING_LIT
   40       | . INT_LIT
   41       | . l_expr
   42       | . r_expr '+' r_expr
   43       | . r_expr '-' r_expr
   44       | . r_expr '*' r_expr
   45       | . r_expr '/' r_expr
   46       | . '-' r_expr
   47       | . '(' r_expr ')'
   48       | . r_expr EQUALS r_expr
   49       | . r_expr ATLEAST r_expr
   50       | . r_expr ATMOST r_expr
   51       | . r_expr '<' r_expr
   52       | . r_expr '>' r_expr
   53       | . r_expr AND r_expr
   54       | . r_expr OR r_expr
   55       | . NOT r_expr
   56       | . r_expr '.' IDENT '(' actual_args ')'
   61       | . IDENT '(' actual_args ')'
   62 statement: . RETURN opt_r_expr ';'
   65          | . TYPECASE r_expr '{' opt_type_alt '}'

    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    RETURN      shift, and go to state 10
    TYPECASE    shift, and go to state 11
    NOT         shift, and go to state 12
    IDENT       shift, and go to state 13
    INT_LIT     shift, and go to state 14
    STRING_LIT  shift, and go to state 15
    '-'         shift, and go to state 16
    '('         shift, and go to state 17

    $default  reduce using rule 6 (opt_statements)

    statement     go to state 36
    if_statement  go to state 21
    l_expr        go to state 22
    r_expr        go to state 23


State 20

    9 statements: statement .

    $default  reduce using rule 9 (statements)


State 21

   26 statement: if_statement .

    $default  reduce using rule 26 (statement)


State 22
